# exoskeleton

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  LinuxInstall.md  README.md  docker-compose.yml  doxygen.conf  package.xml  run.sh  setup.py  template.cpp  unpack.sh
arduino/: README.md
arduino/Archive/: pitch_ros_minimized.ino
arduino/testMain/: testMain.ino
controller/: LICENSE  README.md  package.xml
controller/include/: test.txt
controller/nodes/: arduino.py  arduino_data.py  arduino_sim.py  controller.py  odrive_exo.py  terminal.py
controller/src/: odrive_exo.py  terminal.py
cpp/include/: exoskeleton.h
cpp/src/: exoskeleton_elbow.cpp
cpp/src/old_exoskeleton/: exoskeleton.cpp
cpp/src/old_odrive_calibration/: ODCalibration.cpp
dockerize/: Dockerfile  Makefile  README.md  requirements.txt  run_container.sh
eclipseTest/: .cproject  .project  eclipseTest.cpp
exo/src/sensor_reading/: sensor_reading.h  sensor_reading.ino
include/: exoskeleton.h  math.py
include/exoskeleton/: SerialPort.h  exoskeleton.h
launch/: launch_nodes.launch
legacy/cpp/setup/: install-linux.sh
legacy/cpp/src/: exoskeleton.h  template.cpp
linux/: CMakeLists.txt
linux/src/: main.cpp
linux/src/exoskeleton/: CMakeLists.txt
linux/test/: CMakeLists.txt  main.cpp
linux/test/src/: exoskeleton_tests.cpp
nodes/: joint.py  joint_node.py
python/src/: pid.py
ros_noetic_dockerized/: Dockerfile  Makefile  README.md
setup/: Makefile-Windows  install-linux.sh
sim/: config.yaml  env.py  exoskeleton.py  model.urdf  play.py  sim.py
src/: CMakeLists.txt  Makefile  Makefile_Windows  ODCalibration.cpp  PD.cpp  PD_ODrive.cpp  exoskeleton.cpp  exoskeleton.h  exoskeleton_elbow.cpp  flex_sensor.h  flexsensor.cpp  gravity_comp.py  joint.cpp  joint.h  joint.py  joint_node.py  main.cpp  main.h  math_conversion.py  odrive_exo.py  odrive_exoOLD.py  pid.py  template.cpp  terminal.py  terminal_node.py
src/OOP_flex_sensor/: flex_sensor.cpp  flex_sensor.h
src/OOP_flex_sensor/build-mega2560/: OOP_flex_sensor.elf  OOP_flex_sensor.hex
src/build-uno/: src.elf
src/esc/potentiometerTest/: calibration.ino
src/exoskeleton/: SerialPort.cpp  exoskeleton.cpp  exoskeleton.h
src/makefiles/: Makefile_Linux  Makefile_MacOS  Makefile_Windows  Makefile_Windows_Cyrus
src/old_exoskeleton/: old_exoskeleton.h  old_exoskeleton_elbow.cpp  older_exoskeleton.cpp
src/servoTest/: eclipseTest.cpp
test/src/: exoskeleton_tests.cpp
(+4 files in other folders)
